test/spec_vectors/local_set/fail/module_30.wat
(module (func $unbound-param (param i32 i64) (local.set 2 (i32.const 0))))